artifacts/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: agentgateway-system
spec:
  gatewayClassName: agentgateway
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  - name: httpbin-https
    protocol: HTTPS
    port: 443
    hostname: httpbin.example.com
    tls:
      mode: Terminate
      certificateRefs:
      - name: httpbin-cert
  - name: bookinfo-https
    protocol: HTTPS
    port: 443
    hostname: bookinfo.example.com
    tls:
      mode: Terminate
      certificateRefs:
      - name: bookinfo-cert
